--- a/src/components/App/theme.scss
+++ b/src/components/App/theme.scss
@@ -4,3 +4,5 @@ $break-mobile-menu: 750px;
 $break-list-2col: 600px;
 $break-list-3col: 1100px;
 $break-list-4col: 1450px;
+
+$side-menu-width: 250px;
